--- a/portfolio/requirements.txt
+++ b/portfolio/requirements.txt
@@ -4,6 +4,7 @@ django-ckeditor-5==0.2.15
 django-environ==0.11.2
 django-js-asset==2.2.0
 django-ordered-model==3.7.4
+django-recaptcha==4.0.0
 pillow==10.4.0
 sqlparse==0.5.1
 tzdata==2024.2
